--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <h1 class="logo"><a class="logo_link" href="index.html">MoGo</a></h1>
         <nav class="navigation">
             <ul class="list">
-                <li><a class="menuitem" href="#">About</a></li>
-                <li><a class="menuitem" href="#">Service</a></li>
-                <li><a class="menuitem" href="#">Work</a></li>
-                <li><a class="menuitem" href="#">Blog</a></li>
-                <li><a class="menuitem" href="#">Contact</a></li>
+                <li class="menu-item"><a class="menu-link" href="#">About</a></li>
+                <li class="menu-item"><a class="menu-link" href="#">Service</a></li>
+                <li class="menu-item"><a class="menu-link" href="#">Work</a></li>
+                <li class="menu-item"><a class="menu-link" href="#">Blog</a></li>
+                <li class="menu-item"><a class="menu-link" href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -27,50 +27,50 @@
             <h2 class="title">We work with<br>
                 <span class="subtitle">amazing services</span>
             </h2>
-            <li class="list_of_services">
-                    <ul class="service_item">
-                        <img src="./img/icon1.png" alt="icon" class="icon1" width="32" height="32">
+            <ul class="list_of_services">
+                    <li class="service_item">
+                        <img src="./img/icon1.png" alt="icon-clock" class="icon" width="32" height="32">
                         <section class="text">
                             <h3 class="name_of_service">Photography</h3>
                             <p class="service_article">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
                         </section>
-                    </ul>
-                    <ul class="service_item">
-                        <img src="./img/icon2.png" alt="icon" class="icon2" width="32" height="32">
+                    </li>
+                    <li class="service_item">
+                        <img src="./img/icon2.png" alt="icon-line" class="icon" width="32" height="32">
                         <section class="text">
                             <h3 class="name_of_service">Web-design</h3>
                             <p class="service_article">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                         </section>
-                    </ul>
-                    <ul class="service_item">
-                        <img src="img/icon3.png" alt="icon" class="icon3" width="32" height="32">
+                    </li>
+                    <li class="service_item">
+                        <img src="img/icon3.png" alt="icon-tv" class="icon" width="32" height="32">
                         <section class="text">
                             <h3 class="name_of_service">Creativity</h3>
                             <p class="service_article">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                         </section>
-                    </ul>
-                    <ul class="service_item">
-                        <img src="./img/icon4.png" alt="icon" class="icon4" width="32" height="32">
+                    </li>
+                    <li class="service_item">
+                        <img src="./img/icon4.png" alt="icon-book" class="icon" width="32" height="32">
                         <section class="text">
                             <h3 class="name_of_service">Seo</h3>
                             <p class="service_article">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
                         </section>
-                    </ul>
-                    <ul class="service_item">
-                        <img src="./img/icon5.png" alt="icon" class="icon5" width="32" height="32">
+                    </li>
+                    <li class="service_item">
+                        <img src="./img/icon5.png" alt="icon-house" class="icon" width="32" height="32">
                         <section class="text">
                             <h3 class="name_of_service">CSS/HTML</h3>
                             <p class="service_article">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
                         </section>
-                    </ul>
-                    <ul class="service_item">
-                        <img src="./img/icon6.png" alt="icon" class="icon6" width="32" height="32">
+                    </li>
+                    <li class="service_item">
+                        <img src="./img/icon6.png" alt="icon-frame" class="icon" width="32" height="32">
                         <section class="text">
                             <h3 class="name_of_service">Digital</h3>
                             <p class="service_article">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                         </section>
-                    </ul>
-            </li>
+                    </li>
+                </ul>
         </section>
         <section class="team_members_section">
             <h2 class="title">Who we are<br>
@@ -148,10 +148,10 @@
             <p class="footer_text">© 2016 MoGo free PSD template by 
                 <a href="#" class="designer_link">Laaqiq</a>
             </p>
-            <section class="button">
-                <input class="input_email" type="text" value="Your Email...">
-                <button class="subscribe">Subscribe</button>
-            </section>  
+            <form class="subsribe"> 
+                <input name="email" class="input_email" placeholder="Your Email..." type="text">
+                <button type="submit" class="button">Subscribe</button>
+            </form>  
         </section>
     </footer>
     
