--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </h2>
             <p class="team_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <ul class="team_list">
-                <ul class="team_member">
+                <li class="team_member">
                     <img src="./img/team1.jpg" alt="member_photo" class="member_image">
                     <div class="gradient"></div>
                     <p class="name_of_member">Matthew Dix</p>
@@ -97,8 +97,8 @@
                             <a href="#"><img src="./img/social_icon4.png" alt="icon" class="social_icon"></a>
                         </div>
                     </div>
-                </ul>
-                <ul class="team_member">
+                </li>
+                <li class="team_member">
                     <img src="./img/team2.jpg" alt="member_photo" class="member_image">
                     <div class="gradient"></div>
                     <p class="name_of_member">Christopher Campbell</p>
@@ -117,8 +117,8 @@
                             <a href="#"><img src="./img/social_icon4.png" alt="icon" class="social_icon"></a>
                         </div>
                     </div>
-                </ul>
-                <ul class="team_member">
+                </li>
+                <li class="team_member">
                     <img src="./img/team3.jpg" alt="member_photo" class="member_image">
                     <div class="gradient"></div>
                     <p class="name_of_member">Michael Fertig</p>
@@ -137,7 +137,7 @@
                             <a href="#"><img src="./img/social_icon4.png" alt="icon" class="social_icon"></a>
                         </div>
                     </div>
-                </ul>
+                </li>
             </ul>
         </section>
         
